<resources>
    <string name="app_name">NYTSearch</string>
    <string name="hello_world">Hello World</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="oldest_first">Oldest First</string>
    <string name="newest_first">Newest First</string>
    <string name="news_desk">News Desk</string>
    <string name="label_art">Arts</string>
    <string name="label_sport">Sports</string>
    <string name="fashion"><![CDATA[Fashion & Style]]></string>
    <string name="apply_filter">Apply Filter</string>
    <string name="home_label">Home</string>
    <string name="fav_label">Favorites</string>
    <string name="dark_label">Enable Dark Mode</string>
    <string name="light_label">Enable Light Mode</string>
    <string name="search_label">Search</string>
    <string name="filter_label">Filter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_favorite_item">FavoriteItemActivity</string>
</resources>
