<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_label" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/fav_label" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_moon_black_24dp"
            android:title="@string/dark_label" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_wb_sunny_black_24dp"
            android:title="@string/light_label" />
    </group>
</menu>