<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Switch
            android:id="@+id/swOldNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/oldest_first" />

        <TextView
            android:id="@+id/tvNewestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest_first" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tvBeginDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_date" />

            <ImageButton
                android:id="@+id/ibBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@id/tvBeginDate"
                android:contentDescription="@string/begin_date"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_today_black_24dp" />

            <TextView
                android:id="@+id/tvBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="09/19/2016" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tvEndDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date" />

            <ImageButton
                android:id="@+id/ibEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@id/tvEndDateText"
                android:contentDescription="@string/end_date"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_today_black_24dp"
                 />

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="09/19/2017" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/news_desk"/>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <CheckBox android:id="@+id/cbArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_art"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sport"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbFashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion"
                android:onClick="onCheckboxClicked"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>